Change form submit to live firebase function

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       <section id="contact">
         <h1 class="section-title">Contact</h1>
         <form onsubmit="setTimeout(function(){window.location.reload();},10);"
-              action="http://localhost:5001/portfolio-84ccb/us-central1/sendEmail"
+              action="https://us-central1-portfolio-84ccb.cloudfunctions.net/sendEmail"
               id="contact-form"
               method="post"
               role="form"
