Split projects into web and mobile

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
         <button id="close-nav-button">&times;</button>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#web-apps">Web Apps</a></li>
+          <li><a href="#mobile-apps">Mobile Apps</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="https://www.linkedin.com/in/matt-pickle" target="_blank">LinkedIn</a></li>
@@ -37,14 +38,9 @@
        <a href="#projects" class="fas fa-chevron-down"></a>
       </section>
 
-      <section id="projects">
-        <h1 class="section-title">Projects</h1>
+      <section id="web-apps">
+        <h1 class="section-title">Web Apps</h1>
         <div class="projects-container">
-          <div class="project weather">
-            <p class="project-title">Weather App</p>
-            <a href="https://www.weather.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
-            <a href="https://github.com/mpickle86/weather" class="project-btn code-btn" target="_blank">CODE</a>
-          </div>
           <div class="project journal">
             <p class="project-title">Journal App</p>
             <a href="https://www.journal.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
@@ -59,6 +55,19 @@
             <p class="project-title">Pirate Translator</p>
             <a href="https://www.pirate-translator.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
             <a href="https://github.com/mpickle86/pirate-translator" class="project-btn code-btn" target="_blank">CODE</a>
+          </div>
+        </div>
+      </section>
+
+      <section id="mobile-apps">
+        <h1 class="section-title">Mobile Apps</h1>
+        <div class="projects-container no-gap">
+          <div class="project weather">
+            <p class="project-title">Simple Weather</p>
+            <a href="https://www.weather.mattpickle.net" class="project-btn store-btn" target="_blank">
+              <img src="./images/google-play.png" class="google-play-logo">
+            </a>
+            <a href="https://github.com/mpickle86/weather" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
         </div>
       </section>
