Tweak store button styling

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Matt Pickle: Web Developer</title>
+    <title>Matt Pickle</title>
   </head>
   <body>
     <div class="background"></div>
@@ -29,9 +29,9 @@
       <section id="home">
         <div class="home-text-container">
           <h1 class="home-title blue-line">Matt Pickle</h1>
-          <h2 class="home-subtitle">Web Developer</h2>
-          <p class="home-text">I'm a front end web developer with experience in React, JavaScript,
-            HTML, CSS, Node, Express, and MongoDB.</p>
+          <h2 class="home-subtitle">Web & Mobile Developer</h2>
+          <p class="home-text">I'm a front end developer with experience in React, JavaScript,
+            HTML5, CSS3, and React Native.</p>
           <p class="home-text">Please contact me at mattpickle@mattpickle.net
             concerning employment opportunities.</p>
        </div>
@@ -67,7 +67,7 @@
             <a href="https://www.weather.mattpickle.net" class="project-btn store-btn" target="_blank">
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
-            <a href="https://github.com/mpickle86/weather" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/mpickle86/weather-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
         </div>
       </section>
@@ -79,9 +79,11 @@
           <li>HTML5</li>
           <li>CSS3/Sass</li>
           <li>React</li>
+          <li>React Native</li>
           <li>Express</li>
           <li>Node</li>
           <li>MongoDB</li>
+          <li>Firebase</li>
           <li>Responsive Design</li>
           <li>CRUD/RESTful APIs</li>
           <li>Graphic Design</li>
