Update weather play store link

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,9 @@
         <div class="projects-container no-gap">
           <div class="project weather">
             <p class="project-title">Simple Weather</p>
-            <a href="https://www.weather.mattpickle.net" class="project-btn store-btn" target="_blank">
+            <a href="https://play.google.com/store/apps/details?id=weather.mobile"
+               class="project-btn store-btn"
+               target="_blank">
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
             <a href="https://github.com/mpickle86/weather-mobile" class="project-btn code-btn" target="_blank">CODE</a>
