Add Simple Notes app

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
       <section id="mobile-apps">
         <h1 class="section-title">Mobile Apps</h1>
-        <div class="projects-container no-gap">
+        <div class="projects-container">
           <div class="project weather">
             <p class="project-title">Simple Weather</p>
             <a href="https://play.google.com/store/apps/details?id=weather.mobile"
@@ -70,6 +70,15 @@
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
             <a href="https://github.com/mpickle86/weather-mobile" class="project-btn code-btn" target="_blank">CODE</a>
+          </div>
+          <div class="project notes">
+            <p class="project-title">Simple Notes</p>
+            <a href="https://play.google.com/store/apps/details?id=com.slightlyimpressive.simplenotes"
+               class="project-btn store-btn"
+               target="_blank">
+              <img src="./images/google-play.png" class="google-play-logo">
+            </a>
+            <a href="https://github.com/mpickle86/notes-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
         </div>
       </section>
