Add Garden Planner App

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,15 @@
       <section id="mobile-apps">
         <h1 class="section-title">Mobile Apps</h1>
         <div class="projects-container">
+          <div class="project garden">
+            <p class="project-title">Garden Planner</p>
+            <a href="https://play.google.com/store/apps/details?id=com.slightlyimpressive.gardenplanner"
+               class="project-btn store-btn"
+               target="_blank">
+              <img src="./images/google-play.png" class="google-play-logo">
+            </a>
+            <a href="https://github.com/mpickle86/garden-mobile" class="project-btn code-btn" target="_blank">CODE</a>
+          </div>
           <div class="project weather">
             <p class="project-title">Simple Weather</p>
             <a href="https://play.google.com/store/apps/details?id=weather.mobile"
