Load submit button as hidden until captcha success

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
           <input type="text" class="contact-input" id="email" name="email">
           <label for="message" class="label">Message:</label>
           <textarea id="message" name="message"></textarea>
-          <button type="submit" class="submit">SUBMIT</button>
+          <button type="submit" class="submit" hidden="true">SUBMIT</button>
           <div
             class="g-recaptcha"
             data-sitekey="6Lc4-eYdAAAAAKnaqep_1eq7W8_GQd5-p52lOYN1"
