--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="https://www.linkedin.com/in/matt-pickle" target="_blank">LinkedIn</a></li>
-          <li><a href="https://github.com/mpickle86" target="_blank">GitHub</a></li>
+          <li><a href="https://github.com/matt-pickle" target="_blank">GitHub</a></li>
         </ul>
       </nav>
     </header>
