Fix down arrow anchor link

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           <p class="home-text">Please contact me at mattpickle@mattpickle.net
             concerning employment opportunities.</p>
        </div>
-       <a href="#projects" class="fas fa-chevron-down"></a>
+       <a href="#web-apps" class="fas fa-chevron-down"></a>
       </section>
 
       <section id="web-apps">
