Update skills with HubSpot

--- a/public/index.html
+++ b/public/index.html
@@ -101,12 +101,9 @@
           <li>CSS3/Sass</li>
           <li>React</li>
           <li>React Native</li>
-          <li>Express</li>
-          <li>Node</li>
-          <li>MongoDB</li>
+          <li>HubSpot CMS</li>
+          <li>HubSpot API</li>
           <li>Firebase</li>
-          <li>Responsive Design</li>
-          <li>CRUD/RESTful APIs</li>
           <li>Graphic Design</li>
         </ul>
       </section>
