Update top text for HubSpot

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,8 @@
         <div class="home-text-container">
           <h1 class="home-title blue-line">Matt Pickle</h1>
           <h2 class="home-subtitle">Web & Mobile Developer</h2>
-          <p class="home-text">I'm a front end developer with experience in React, JavaScript,
-            HTML5, CSS3, and React Native.</p>
-          <p class="home-text">Please contact me at mattpickle@mattpickle.net
-            concerning employment opportunities.</p>
+          <p class="home-text">I'm a front end developer with experience in HubSpot CMS development, React, and React Native.</p>
+          <p class="home-text">Please contact me at mattpickle@mattpickle.net concerning employment opportunities.</p>
        </div>
        <a href="#web-apps" class="fas fa-chevron-down"></a>
       </section>
