--- a/public/index.html
+++ b/public/index.html
@@ -43,17 +43,17 @@
           <div class="project journal">
             <p class="project-title">Journal App</p>
             <a href="https://www.journal.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
-            <a href="https://github.com/mpickle86/journal" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/journal" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project workout-tracker">
             <p class="project-title">Workout Tracker</p>
             <a href="https://www.workout-tracker.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
-            <a href="https://github.com/mpickle86/workout-tracker-firebase" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/workout-tracker-firebase" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project pirate-translator">
             <p class="project-title">Pirate Translator</p>
             <a href="https://www.pirate-translator.mattpickle.net" class="project-btn demo-btn" target="_blank">DEMO</a>
-            <a href="https://github.com/mpickle86/pirate-translator" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/pirate-translator" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
         </div>
       </section>
@@ -68,7 +68,7 @@
                target="_blank">
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
-            <a href="https://github.com/mpickle86/garden-mobile" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/garden-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project weather">
             <p class="project-title">Simple Weather</p>
@@ -77,7 +77,7 @@
                target="_blank">
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
-            <a href="https://github.com/mpickle86/weather-mobile/tree/version3" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/weather-mobile/tree/version3" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project notes">
             <p class="project-title">Simple Notes</p>
@@ -86,7 +86,7 @@
                target="_blank">
               <img src="./images/google-play.png" class="google-play-logo">
             </a>
-            <a href="https://github.com/mpickle86/notes-mobile" class="project-btn code-btn" target="_blank">CODE</a>
+            <a href="https://github.com/matt-pickle/notes-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
         </div>
       </section>
