Add height and width to google play logo

--- a/public/index.html
+++ b/public/index.html
@@ -64,27 +64,42 @@
           <div class="project garden">
             <p class="project-title">Garden Planner</p>
             <a href="https://play.google.com/store/apps/details?id=com.slightlyimpressive.gardenplanner"
-               class="project-btn store-btn"
-               target="_blank">
-              <img src="./images/google-play.png" class="google-play-logo">
+              class="project-btn store-btn"
+              target="_blank"
+            >
+              <img src="./images/google-play.png"
+                class="google-play-logo"
+                width="27"
+                height="30"
+              >
             </a>
             <a href="https://github.com/matt-pickle/garden-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project weather">
             <p class="project-title">Simple Weather</p>
             <a href="https://play.google.com/store/apps/details?id=weather.mobile"
-               class="project-btn store-btn"
-               target="_blank">
-              <img src="./images/google-play.png" class="google-play-logo">
+              class="project-btn store-btn"
+              target="_blank"
+            >
+              <img src="./images/google-play.png"
+                class="google-play-logo"
+                width="27"
+                height="30"
+              >
             </a>
             <a href="https://github.com/matt-pickle/weather-mobile/tree/version3" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
           <div class="project notes">
             <p class="project-title">Simple Notes</p>
             <a href="https://play.google.com/store/apps/details?id=com.slightlyimpressive.simplenotes"
-               class="project-btn store-btn"
-               target="_blank">
-              <img src="./images/google-play.png" class="google-play-logo">
+              class="project-btn store-btn"
+              target="_blank"
+            >
+              <img src="./images/google-play.png"
+                class="google-play-logo"
+                width="27"
+                height="30"
+              >
             </a>
             <a href="https://github.com/matt-pickle/notes-mobile" class="project-btn code-btn" target="_blank">CODE</a>
           </div>
