Add alt text to Google Play logos

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
             >
               <img src="./images/google-play.png"
                 class="google-play-logo"
+                alt="Google Play Store"
                 width="27"
                 height="30"
               >
@@ -83,6 +84,7 @@
             >
               <img src="./images/google-play.png"
                 class="google-play-logo"
+                alt="Google Play Store"
                 width="27"
                 height="30"
               >
@@ -97,6 +99,7 @@
             >
               <img src="./images/google-play.png"
                 class="google-play-logo"
+                alt="Google Play Store"
                 width="27"
                 height="30"
               >
