--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Matt Pickle is a front end developer with experience in HubSpot CMS development, React, and React Native.">
     <title>Matt Pickle</title>
   </head>
   <body>
