--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <section id="home">
         <div class="home-text-container">
           <h1 class="home-title blue-line">Matt Pickle</h1>
-          <h2 class="home-subtitle">Web & Mobile Developer</h2>
+          <p class="home-subtitle">Web & Mobile Developer</p>
           <p class="home-text">I'm a front end developer with experience in HubSpot CMS development, React, and React Native.</p>
           <p class="home-text">Please contact me at mattpickle@mattpickle.net concerning employment opportunities.</p>
        </div>
@@ -39,7 +39,7 @@
       </section>
 
       <section id="web-apps">
-        <h1 class="section-title">Web Apps</h1>
+        <h2 class="section-title">Web Apps</h2>
         <div class="projects-container">
           <div class="project journal">
             <p class="project-title">Journal App</p>
@@ -60,7 +60,7 @@
       </section>
 
       <section id="mobile-apps">
-        <h1 class="section-title">Mobile Apps</h1>
+        <h2 class="section-title">Mobile Apps</h2>
         <div class="projects-container">
           <div class="project garden">
             <p class="project-title">Garden Planner</p>
@@ -111,7 +111,7 @@
       </section>
       
       <section id="skills">
-        <h1 class="section-title">Skills</h1>
+        <h2 class="section-title">Skills</h2>
         <ul class="skills-list">
           <li>JavaScript</li>
           <li>HTML5</li>
@@ -126,7 +126,7 @@
       </section>
 
       <section id="contact">
-        <h1 class="section-title">Contact</h1>
+        <h2 class="section-title">Contact</h2>
         <form onsubmit="setTimeout(function(){window.location.reload();},50);"
               action="https://us-central1-portfolio-84ccb.cloudfunctions.net/sendEmail"
               id="contact-form"
